--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -4,13 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/cubans"
     tools:context=".AnswerActivity">
 
     <TextView
         android:id="@+id/answerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
+        android:textAlignment="center"
+        android:textColor="#202F83"
+        android:textColorHighlight="#FAF3F3"
+        android:textColorHint="#0A387C"
+        android:textColorLink="#FFFFFF"
+        android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
