--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -7,17 +7,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity"
     android:orientation="vertical"
+    android:background="@drawable/cubik"
     android:gravity="center"
     >
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="cursive"
-        android:textSize="34sp"
+        android:fontFamily="casual"
+        android:shadowColor="#E1C7C7"
         android:text="@string/question0"
-        android:layout_margin="30dp"
-        />
+        android:textAlignment="center"
+        android:textColor="#202F83"
+        android:textColorHighlight="#FAF3F3"
+        android:textColorHint="#0A387C"
+        android:textColorLink="#FFFFFF"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -36,10 +48,10 @@
             android:layout_gravity="top"
             android:layout_marginRight="10dp"
             android:layout_weight="0"
-            android:background="#4CAF50"
+            android:background="#33CC99"
             android:text="@string/yes"
             android:textColor="#FFFFFF"
-            android:textSize="20sp" />
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/btnNo"
@@ -48,19 +60,24 @@
             android:layout_gravity="top"
             android:layout_marginLeft="10dp"
             android:layout_weight="0"
-            android:background="#E91E63"
+            android:background="#FF6633"
             android:text="@string/no"
             android:textColor="#FFFFFF"
-            android:textSize="20sp" />
-        <Button
-            android:id="@+id/showAnswer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Показать ответ"
-            app:layout_constraintBottom_toTopOf="@+id/textView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textSize="16sp" />
+
     </LinearLayout>
+
+    <Button
+        android:id="@+id/showAnswer"
+        android:layout_width="108dp"
+        android:layout_height="wrap_content"
+        android:background="#9966CC"
+        android:textColor="#C0C0C0"
+        android:textSize="16sp"
+        android:text="Показать ответ"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </LinearLayout>
