--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cubans"
+    android:background="@drawable/verticalbg"
     tools:context=".AnswerActivity">
 
     <TextView
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textColor="#202F83"
+        android:textColor="#FFFFFF"
         android:textColorHighlight="#FAF3F3"
         android:textColorHint="#0A387C"
         android:textColorLink="#FFFFFF"
