--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cube"
+    android:background="@drawable/verticalbg2"
     tools:context=".MainActivity">
     <!-- Комментарий только между тегами! -->
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -15,28 +16,30 @@
         android:shadowColor="#E1C7C7"
         android:text="@string/question0"
         android:textAlignment="center"
-        android:textColor="#202F83"
+        android:textColor="#FAFAFD"
         android:textColorHighlight="#FAF3F3"
         android:textColorHint="#0A387C"
         android:textColorLink="#FFFFFF"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.908" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="409dp"
-        android:layout_height="290dp"
+        android:layout_width="401dp"
+        android:layout_height="201dp"
+        android:layout_marginBottom="108dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:paddingTop="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="1dp">
+        tools:layout_editor_absoluteX="5dp">
 
         <Button
             android:id="@+id/btnYes"
@@ -60,30 +63,34 @@
             android:background="#FF6633"
             android:text="@string/no"
             android:textColor="#FFFFFF"
-            android:textSize="16sp" />
+            android:textSize="18sp" />
+
         <Button
-            android:id="@+id/isResultAnswer"
-            android:layout_width="wrap_content"
+            android:id="@+id/showAnswer"
+            android:layout_width="133dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginLeft="10dp"
             android:layout_weight="0"
-            android:text="Результат опроса" />
+            android:background="#9966CC"
+            android:text="Показать ответ"
+            android:textColor="#C0C0C0"
+            android:textSize="14sp" />
+
 
     </LinearLayout>
 
     <Button
-        android:id="@+id/showAnswer"
+        android:id="@+id/isResultAnswer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#9966CC"
-        android:textColor="#C0C0C0"
-        android:textSize="16sp"
-        android:text="Показать ответ"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
+        android:layout_weight="0"
+        android:text="Показать результат"
+        android:background="#421815"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 </android.support.constraint.ConstraintLayout>
