--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,9 +48,9 @@
             android:layout_gravity="top"
             android:layout_marginRight="10dp"
             android:layout_weight="0"
-            android:background="#33CC99"
+            android:background="#032C0E"
             android:text="@string/yes"
-            android:textColor="#FFFFFF"
+            android:textColor="#4EA63F"
             android:textSize="20sp" />
 
         <Button
@@ -60,9 +60,9 @@
             android:layout_gravity="top"
             android:layout_marginLeft="10dp"
             android:layout_weight="0"
-            android:background="#FF6633"
+            android:background="#6C0B1F"
             android:text="@string/no"
-            android:textColor="#FFFFFF"
+            android:textColor="#FD5B5B"
             android:textSize="18sp" />
 
         <Button
@@ -72,9 +72,9 @@
             android:layout_gravity="top"
             android:layout_marginLeft="10dp"
             android:layout_weight="0"
-            android:background="#9966CC"
-            android:text="Показать ответ"
-            android:textColor="#C0C0C0"
+            android:background="#290328"
+            android:text="ПОКАЗАТЬ ОТВЕТ"
+            android:textColor="#BD34EF"
             android:textSize="14sp" />
 
 
@@ -85,8 +85,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0"
+        android:background="#332F2F"
         android:text="Показать результат"
-        android:background="#421815"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
